# shapes

./: CMakeLists.txt  main.cpp
shapes_lib/: CMakeLists.txt  abstract_canvas.hpp  abstract_shape.hpp  canvas.cpp  canvas.hpp  circle.cpp  circle.hpp  common.hpp  pixmap.cpp  pixmap.hpp  rectangle.cpp  rectangle.hpp  shape.cpp  shape.hpp  triangle.cpp  triangle.hpp
